--- a/index.html
+++ b/index.html
@@ -14,17 +14,88 @@ Select ONE Additional Feature to Add
 
 <!DOCTYPE html>
 <html>
-
-<head>
-  <title>Unit 4 Project</title>
-  <meta charset="utf-8">
-  <style>
-
-  </style>
-</head>
-<body>
-
- 
-
-</body>
+  <head>
+    <title>Unit 4 Project</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Dancing+Script:wght@400..700&family=Quicksand:wght@300..700&display=swap"
+      rel="stylesheet"
+    />
+    <style>
+      body {
+         font-family: "Bebas Neue", sans-serif;
+        background-image: url("https://cdn.glitch.global/88bbc116-ab98-4727-b0f7-9cf07a3c65eb/f0a1b472b4bdd2223dd0f02940d0f0aa.jpg?v=1731288923982");
+        
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+      }
+      
+      #secret {
+        border-radius: 100%;
+        object-fit: cover;
+      }
+      #WH {
+        color: rgb(255, 155, 170);
+      }
+      h1 {
+        color: rgb(245, 115, 146);
+        font-size: 100px;
+      }
+      h2 {
+        color: rgb(255, 155, 170);
+         font-size: 60px;
+      }
+      p {
+        color: rgb(236, 109, 81);
+        font-size: 70
+      }
+      ul {
+        color:rgb(236, 109, 81);
+      }
+      img{
+        border-radius: 30px;
+      }
+    </style>
+  </head>
+  <body>
+    <h1>BEAUTY SECRETS</h1>
+    <p>
+    Beauty secrets are cherished because they help people enhance their natural appearance, and boost confidence. They also provide insights into effective routines and products that have stood the test of time.
+    </p>
+    <img
+      id="secret"
+      src="https://cdn.glitch.global/88bbc116-ab98-4727-b0f7-9cf07a3c65eb/03bd9d5a2058d99679017426872d5c9c.jpg?v=1731289381890"
+      width="150"
+      height="150"
+    />
+    <h2 id="WH">TIPS</h2>
+    <ul>
+      <li>GET SLEEP</li>
+      <li>READ BEFORE BED</li>
+      <li>MEDITATE</li>
+      <li>USE ROSEWATER</li>
+      <li>HAVE A SKINCARE ROUTINE</li>
+      <li>PRIORITIZE YOURSELF</li>
+      <li>GIVE YOURSELF BREAKS WHEN NEEDED</li>
+      <li>STAY HYDRATED</li>
+      <li>DONT STRESS YOURSELF OUT</li>
+    </ul>
+  
+    <h2>SKINCARE</h2>
+    <p>
+      Skincare is taking steps to keep your skin clean, hydrated, and protected. It usually involves cleansing, moisturizing, and using sunscreen to maintain healthy, glowing skin. Good skincare helps prevent issues like dryness, acne, and early aging.
+    </p>
+    <img
+      src="https://cdn.glitch.global/88bbc116-ab98-4727-b0f7-9cf07a3c65eb/cdf4007fb9d75e447514448880d9b3bd.jpg?v=1731290279731"
+      width="250"
+    />
+    <img
+      src="https://cdn.glitch.global/88bbc116-ab98-4727-b0f7-9cf07a3c65eb/ed7e8a8bf2193a6c4c713e61776d63c5.jpg?v=1731290341245"
+      width="200"
+    />
+  </body>
 </html>
